# kansei

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-debian-nightly.yml  build-debian-stable.yml  build-ros2-ws-action.yml  ci.yaml
data/: kansei.json
include/kansei/: complementary_filter.hpp  imu.hpp  imu_filter.hpp  inertial_manager.hpp  measurement_unit.hpp  mpu.hpp  stateless_orientation.hpp  world_frame.hpp
include/kansei/determinant/: determinant.hpp  determinant_type.hpp  fallen_determinant.hpp  fallen_status.hpp
include/kansei/fallen/: fallen.hpp
include/kansei/fallen/determinant/: determinant_type.hpp
include/kansei/fallen/node/: fallen_determinant.hpp  fallen_node.hpp  fallen_status.hpp
include/kansei/filter/: filter.hpp  madgwick.hpp
include/kansei/filter/madgwick/: madgwick_filter.hpp  stateless_orientation.hpp  world_frame.hpp
include/kansei/locomotion/: locomotion.hpp
include/kansei/locomotion/determinant/: determinant_locomotion.hpp
include/kansei/locomotion/node/: locomotion_determinant.hpp  locomotion_node.hpp  locomotion_status.hpp
include/kansei/measurement/: measurement.hpp
include/kansei/measurement/filter/: filter.hpp  gyro_filter.hpp
include/kansei/measurement/filter/madgwick/: madgwick.hpp  madgwick_filter.hpp  stateless_orientation.hpp  world_frame.hpp
include/kansei/measurement/node/: measurement_node.hpp  measurement_unit.hpp
include/kansei/measurement/sensor/: ina.hpp  mpu.hpp
include/kansei/node/: inertial_manager.hpp  kansei_node.hpp
include/kansei/sensor/: mpu.hpp
include/kansei/unit/: measurement_unit.hpp  unit.hpp
include/kansei/unit/filter/: filter.hpp  madgwick.hpp
include/kansei/unit/filter/madgwick/: madgwick_filter.hpp  stateless_orientation.hpp  world_frame.hpp
include/kansei/unit/sensor/: mpu.hpp
launch/: kansei_launch.launch.py
src/: check_orientation_main.cpp  check_power_main.cpp  check_rpy_main.cpp  kansei_main.cpp
src/kansei/: complementary_filter.cpp  imu.cpp  imu_filter.cpp  measurement_unit.cpp  mpu.cpp  stateless_orientation.cpp
src/kansei/determinant/: fallen_determinant.cpp
src/kansei/fallen/node/: fallen_determinant.cpp  fallen_node.cpp
src/kansei/filter/: filter.cpp
src/kansei/filter/madgwick/: madgwick_filter.cpp  stateless_orientation.cpp
src/kansei/locomotion/node/: locomotion_determinant.cpp
src/kansei/measurement/filter/: filter.cpp  gyro_filter.cpp
src/kansei/measurement/filter/madgwick/: madgwick_filter.cpp  stateless_orientation.cpp
src/kansei/measurement/node/: measurement_node.cpp  measurement_unit.cpp
src/kansei/measurement/sensor/: ina.cpp  mpu.cpp
src/kansei/node/: inertial_manager.cpp  kansei_node.cpp
src/kansei/sensor/: mpu.cpp
src/kansei/unit/: measurement_unit.cpp
src/kansei/unit/filter/: colcon-test.sh  filter.cpp
src/kansei/unit/filter/madgwick/: madgwick_filter.cpp  stateless_orientation.cpp
src/kansei/unit/sensor/: mpu.cpp
test/fallen/: determinant_test.cpp  fallen_test.cpp
test/measurement/: measurement_test.cpp
test/node/: kansei_node_test.cpp
