<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kansei</name>
  <version>0.0.0</version>
  <description>IMU Package for ROS 2 Project</description>
  <maintainer email="jalilpro31@gmail.com">Maroqi Jalil</maintainer>
  <license>MIT License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>jitsuyo</depend>
  <depend>keisan</depend>
  <depend>kansei_interfaces</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tachimawari</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
